--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 Lasers, Thaiga, Leléo, Crusher Fooxi
                 Kroonos e Brabox</p>
             <button class="button">Explore</button>
+            <video src="./img/responsividade/Sweater Weather ❄️.mp4" controls controlslis="nodowload" autoplay muted poster="./img/channels4_profile.jpg">
         </div>
     </main>
 </body>
